// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tasks/build/webpackReleaseConfig client config has not regressed 1`] = `
Object {
  "bail": true,
  "context": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
  "devtool": "",
  "entry": Object {
    "client": "./client",
  },
  "externals": Object {},
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "exclude": /node_modules/,
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "eslint-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "babel-loader",
        "options": Object {
          "cacheDirectory": true,
        },
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "D:\\\\work\\\\ssr\\\\60fram\\\\node_modules\\\\extract-text-webpack-plugin\\\\loader.js",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": false,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "ident": "postcss",
              "plugins": [Function],
            },
          },
        ],
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "D:\\\\work\\\\ssr\\\\60fram\\\\node_modules\\\\extract-text-webpack-plugin\\\\loader.js",
            "options": Object {
              "omit": 1,
              "remove": true,
            },
          },
          Object {
            "loader": "style-loader",
          },
          Object {
            "loader": "css-loader",
            "options": Object {
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
          Object {
            "loader": "postcss-loader",
            "options": Object {
              "ident": "postcss",
              "plugins": [Function],
            },
          },
        ],
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(eot\\|ttf\\|woff\\|woff2\\)\\(\\\\\\?\\.\\*\\)\\?\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(gif\\|ico\\|jpg\\|jpeg\\|png\\|svg\\|webp\\)\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(mp4\\|webm\\)\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(aac\\|m4a\\|mp3\\|oga\\|ogg\\|wav\\)\\$/,
      },
      Object {
        "loader": "json-loader!po-gettext-loader",
        "test": /\\\\\\.po\\$/,
      },
    ],
  },
  "name": "client",
  "node": Object {
    "process": false,
  },
  "output": Object {
    "filename": "[name].[chunkhash].js",
    "libraryTarget": "var",
    "path": "D:\\\\work\\\\ssr\\\\60fram\\\\dist",
    "publicPath": "",
  },
  "plugins": Array [
    ExtractTextPlugin {
      "filename": "[name].[contenthash].css",
      "id": 1,
      "options": Object {
        "allChunks": true,
        "disable": false,
      },
    },
    UglifyJsPlugin {
      "options": Object {
        "compress": Object {
          "screw_ie8": true,
          "warnings": false,
        },
        "mangle": Object {
          "screw_ie8": true,
        },
        "output": Object {
          "comments": false,
          "screw_ie8": true,
        },
        "sourceMap": false,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"production\\"",
      },
    },
    HashedModuleIdsPlugin {
      "options": Object {
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md5",
      },
    },
    BabiliPlugin {
      "babiliOpts": Object {},
      "options": Object {},
    },
    StatsPlugin {
      "cache": Object {},
      "options": Object {
        "chunkModules": true,
      },
      "output": "client-stats.json",
    },
    CommonsChunkPlugin {
      "async": undefined,
      "children": undefined,
      "chunkNames": Array [
        "bootstrap",
      ],
      "filenameTemplate": "[name].[chunkhash].js",
      "ident": "D:\\\\work\\\\ssr\\\\60fram\\\\node_modules\\\\webpack\\\\lib\\\\optimize\\\\CommonsChunkPlugin.js0",
      "minChunks": Infinity,
      "minSize": undefined,
      "selectedChunks": undefined,
    },
  ],
  "resolve": Object {
    "modules": Array [
      "D:\\\\work\\\\ssr\\\\60fram\\\\src",
      "node_modules",
    ],
  },
  "target": "web",
}
`;

exports[`tasks/build/webpackReleaseConfig server config has not regressed 1`] = `
Object {
  "bail": true,
  "context": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
  "devtool": "",
  "entry": Object {
    "server": "./server",
  },
  "module": Object {
    "rules": Array [
      Object {
        "enforce": "pre",
        "exclude": /node_modules/,
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "eslint-loader",
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "babel-loader",
        "options": Object {
          "cacheDirectory": true,
        },
        "test": /\\\\\\.js\\$/,
      },
      Object {
        "include": /node_modules/,
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "css-loader/locals",
            "options": Object {
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": false,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "test": /\\\\\\.css\\$/,
        "use": Array [
          Object {
            "loader": "css-loader/locals",
            "options": Object {
              "localIdentName": "[hash:base64]",
              "minimize": true,
              "modules": true,
              "sourceMap": false,
            },
          },
        ],
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(eot\\|ttf\\|woff\\|woff2\\)\\(\\\\\\?\\.\\*\\)\\?\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(gif\\|ico\\|jpg\\|jpeg\\|png\\|svg\\|webp\\)\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(mp4\\|webm\\)\\$/,
      },
      Object {
        "include": "D:\\\\work\\\\ssr\\\\60fram\\\\src",
        "loader": "url-loader",
        "options": Object {
          "limit": 10000,
        },
        "test": /\\\\\\.\\(aac\\|m4a\\|mp3\\|oga\\|ogg\\|wav\\)\\$/,
      },
      Object {
        "loader": "json-loader!po-gettext-loader",
        "test": /\\\\\\.po\\$/,
      },
    ],
  },
  "name": "server",
  "node": Object {
    "process": false,
  },
  "output": Object {
    "filename": "[name].js",
    "libraryTarget": "commonjs2",
    "path": "D:\\\\work\\\\ssr\\\\60fram\\\\dist",
    "publicPath": "",
  },
  "plugins": Array [
    ExtractTextPlugin {
      "filename": "[name].css",
      "id": 2,
      "options": Object {
        "allChunks": true,
        "disable": true,
      },
    },
    UglifyJsPlugin {
      "options": Object {
        "compress": Object {
          "screw_ie8": true,
          "warnings": false,
        },
        "mangle": Object {
          "screw_ie8": true,
        },
        "output": Object {
          "comments": false,
          "screw_ie8": true,
        },
        "sourceMap": false,
      },
    },
    DefinePlugin {
      "definitions": Object {
        "process.env.NODE_ENV": "\\"production\\"",
      },
    },
    HashedModuleIdsPlugin {
      "options": Object {
        "hashDigest": "base64",
        "hashDigestLength": 4,
        "hashFunction": "md5",
      },
    },
    BabiliPlugin {
      "babiliOpts": Object {},
      "options": Object {},
    },
    LimitChunkCountPlugin {
      "options": Object {
        "maxChunks": 1,
      },
    },
  ],
  "resolve": Object {
    "modules": Array [
      "D:\\\\work\\\\ssr\\\\60fram\\\\src",
      "node_modules",
    ],
  },
  "target": "node",
}
`;
